[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/sfx/Background/Whinging_new.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/sfx/Background/Betterer_Trombone1.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/sfx/Background/Whispers1.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/sfx/Background/Trombone2.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/sfx/Background/Whispers2.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/sfx/Background/Pigeon_Cooing.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/sfx/Background/Static.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/sfx/Background/White_Christmas.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/sfx/Background/Final_Insanity.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/sfx/Background/Whining.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/sfx/Background/Gasping.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/sfx/Background/Laughing.wav" type="AudioStream" id=12]
[ext_resource path="res://Scenes/sound/BackgroundSounds.gd" type="Script" id=13]

[node name="Node2D" type="Node2D"]
script = ExtResource( 13 )

[node name="Tromboner1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -25.0

[node name="Tromboner2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0

[node name="Whisper1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[node name="Whisper2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="Whining" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="White_Chirst" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0

[node name="Whinge" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -20.0

[node name="Burd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="Laughing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="Gasping" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="Static" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0

[node name="Ending" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
